--- a/.gitignore
+++ b/.gitignore
@@ -205,3 +205,11 @@ cython_debug/
 marimo/_static/
 marimo/_lsp/
 __marimo__/
+
+# Ignore all .log files in the logs directory
+logs/*.log
+
+*.class
+*.jar
+*.war
+
