--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -69,18 +69,18 @@ services:
     networks:
       - de_infrastructure
 
-  postgres-superset:
-    image: postgres:14
-    environment:
-      POSTGRES_USER: superset
-      POSTGRES_PASSWORD: superset_password
-      POSTGRES_DB: superset_db
-    volumes:
-      - postgres_superset_data:/var/lib/postgresql/data
-    ports:
-      - "5435:5432"
-    networks:
-      - de_infrastructure
+  # postgres-superset:
+  #   image: postgres:14
+  #   environment:
+  #     POSTGRES_USER: superset
+  #     POSTGRES_PASSWORD: superset_password
+  #     POSTGRES_DB: superset_db
+  #   volumes:
+  #     - postgres_superset_data:/var/lib/postgresql/data
+  #   ports:
+  #     - "5435:5432"
+  #   networks:
+  #     - de_infrastructure
 
   airflow-webserver:
     <<: *airflow-common
@@ -183,39 +183,39 @@ services:
       de_infrastructure:  # Общая сеть с Kafka/Zookeeper/Spark
         ipv4_address: 11.11.11.23
 
-  superset:
-    image: apache/superset:latest
-    ports:
-      - "8088:8088"
-    environment:
-      SUPERSET_ENV: production
-      SUPERSET_DATABASE_URI: postgresql+psycopg2://superset:superset_password@postgres-superset:5432/superset_db
-    volumes:
-      - ./config/superset_config.py:/app/pythonpath/superset_config.py
-      - superset_home:/app/superset_home
-    networks:
-      - de_infrastructure
+  # superset:
+  #   image: apache/superset:latest
+  #   ports:
+  #     - "8088:8088"
+  #   environment:
+  #     SUPERSET_ENV: production
+  #     SUPERSET_DATABASE_URI: postgresql+psycopg2://superset:superset_password@postgres-superset:5432/superset_db
+  #   volumes:
+  #     - ./config/superset_config.py:/app/pythonpath/superset_config.py
+  #     - superset_home:/app/superset_home
+  #   networks:
+  #     - de_infrastructure
 
-  superset-init:
-    image: apache/superset:latest
-    container_name: superset-init
-    depends_on:
-      - superset
-    environment:
-      SUPERSET_ENV: production
-      SUPERSET_DATABASE_URI: postgresql+psycopg2://superset:superset_password@postgres-superset:5432/superset_db
-    volumes:
-      - ./config/superset_config.py:/app/pythonpath/superset_config.py
-    command: >
-      sh -c "flask db upgrade &&
-             flask fab create-admin
-               --username admin
-               --password admin
-               --firstname Admin
-               --lastname User
-               --email admin@example.com"
-    networks:
-      - de_infrastructure
+  # superset-init:
+  #   image: apache/superset:latest
+  #   container_name: superset-init
+  #   depends_on:
+  #     - superset
+  #   environment:
+  #     SUPERSET_ENV: production
+  #     SUPERSET_DATABASE_URI: postgresql+psycopg2://superset:superset_password@postgres-superset:5432/superset_db
+  #   volumes:
+  #     - ./config/superset_config.py:/app/pythonpath/superset_config.py
+  #   command: >
+  #     sh -c "flask db upgrade &&
+  #            flask fab create-admin
+  #              --username admin
+  #              --password admin
+  #              --firstname Admin
+  #              --lastname User
+  #              --email admin@example.com"
+  #   networks:
+  #     - de_infrastructure
 
   jupyter:
     build:
@@ -273,12 +273,52 @@ services:
       KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:9092,PLAINTEXT_HOST://localhost:29092  # Доступ внутри и снаружи сети
       KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT  # Протоколы безопасности
       KAFKA_INTER_BROKER_LISTENER_NAME: PLAINTEXT  # Внутренний listener
-      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1  # Фактор репликации
+      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 3  # Фактор репликации
       KAFKA_AUTO_CREATE_TOPICS_ENABLE: "true"  # Автосоздание топиков
       KAFKA_DELETE_TOPIC_ENABLE: "true"  # Разрешение удаления топиков
     ports:
       - "9092:9092"  # Порт для внутреннего доступа
       - "29092:29092"  # Порт для внешнего доступа
+    networks:
+      - de_infrastructure
+
+  kafka2:
+    image: confluentinc/cp-kafka:7.4.1
+    depends_on:
+      - zookeeper
+    environment:
+      # Настройки для работы Kafka
+      KAFKA_BROKER_ID: 2
+      KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181  # Подключение к Zookeeper
+      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka2:9093,PLAINTEXT_HOST://localhost:29093  # Доступ внутри и снаружи сети
+      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT  # Протоколы безопасности
+      KAFKA_INTER_BROKER_LISTENER_NAME: PLAINTEXT  # Внутренний listener
+      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 3  # Фактор репликации
+      KAFKA_AUTO_CREATE_TOPICS_ENABLE: "true"  # Автосоздание топиков
+      KAFKA_DELETE_TOPIC_ENABLE: "true"  # Разрешение удаления топиков
+    ports:
+      - "9093:9092"  # Порт для внутреннего доступа
+      - "29093:29092"  # Порт для внешнего доступа
+    networks:
+      - de_infrastructure
+
+  kafka3:
+    image: confluentinc/cp-kafka:7.4.1
+    depends_on:
+      - zookeeper
+    environment:
+      # Настройки для работы Kafka
+      KAFKA_BROKER_ID: 3
+      KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181  # Подключение к Zookeeper
+      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka3:9094,PLAINTEXT_HOST://localhost:29094  # Доступ внутри и снаружи сети
+      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT  # Протоколы безопасности
+      KAFKA_INTER_BROKER_LISTENER_NAME: PLAINTEXT  # Внутренний listener
+      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 3  # Фактор репликации
+      KAFKA_AUTO_CREATE_TOPICS_ENABLE: "true"  # Автосоздание топиков
+      KAFKA_DELETE_TOPIC_ENABLE: "true"  # Разрешение удаления топиков
+    ports:
+      - "9094:9092"  # Порт для внутреннего доступа
+      - "29094:29092"  # Порт для внешнего доступа
     networks:
       - de_infrastructure
 
@@ -290,9 +330,11 @@ services:
       - "8082:8080"
     depends_on:
       - kafka
+      - kafka2
+      - kafka3
     environment:
       KAFKA_CLUSTERS_0_NAME: local
-      KAFKA_CLUSTERS_0_BOOTSTRAPSERVERS: kafka:9092
+      KAFKA_CLUSTERS_0_BOOTSTRAPSERVERS: kafka:9092,kafka2:9093,kafka3:9094
       KAFKA_CLUSTERS_0_ZOOKEEPER: zookeeper:2181
       KAFKA_CLUSTERS_0_KAFKACONNECT_0_NAME: connect
       KAFKA_CLUSTERS_0_KAFKACONNECT_0_ADDRESS: http://kafka-connect:8083
